rns-lang/tests/snapshots/err-parser-instruction-unknown_instruction.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public HelloWorld
.super java/lang/Object

.method public <init> ()V
    .code stack 1 locals 1
        aload_0
        invokespeciall java/lang/Object <init> ()V
        return
    .end
.end

----- STDOUT -----

----- STDERR -----
Error: unknown instruction 'invokespeciall'
   ╭─[ test_data/integration/err/parser/instruction/unknown_instruction.ja:7:9 ]
   │
 7 │         invokespeciall java/lang/Object <init> ()V
   │         ───────┬──────  
   │                ╰──────── did you mean 'invokespecial' ?
   │ 
   │ Note: Check the Java Virtual Machine specification for a list of valid opcodes.
───╯
